[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Goomba/1.webp" type="Texture" id=1]
[ext_resource path="res://scripts/Goomba.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5, 12.625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 9.5 )

[node name="Goomba" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea2D"]
position = Vector2( -1, 14.375 )
shape = SubResource( 2 )

[node name="DieArea2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DieArea2D2"]
position = Vector2( -1, -18.5 )
shape = SubResource( 3 )

[node name="WalkTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="KillArea2D" to="." method="_on_KillArea2D_body_entered"]
[connection signal="body_entered" from="DieArea2D2" to="." method="_on_DieArea2D2_body_entered"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
